# wasm-christmas-tree

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  rollup.config.js
feature/: feature.css  feature.js  stage1.js
shaders/: standard.frag  standard.vert
src/: camera.rs  lib.rs  lights.rs  material.rs  mesh.rs  model.rs  shader.rs  triangle.rs
src/coords/: mod.rs
src/xmas_tree/: baubles.rs  ground.rs  mod.rs  scene.rs  snow.rs  tree.rs
www/: bootstrap.js  index.html  package-lock.json  package.json  webpack.config.js
