[package]
name = "wasm-christmas-tree"
version = "0.1.0"
authors = ["Jacek Bilski <jacek@bilski.tech>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[profile.release]
opt-level = "s"
