[package]
name = "wasm-christmas-tree"
version = "0.1.0"
authors = ["Jacek Bilski <jacek@bilski.tech>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.62"
js-sys = "0.3.39"
cgmath = "0.17.0"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.39"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlVertexArrayObject',
  'Window',
  'console',
]

[profile.release]
opt-level = "s"
